# Ernest

./: .export.toml  .gitignore  LICENSE  NOTICE  README.md  agent.full.md  agent.md  deploy.md  ernest.desktop  export.md  index.html  later.txt  note-intention.mkd  package-lock.json  package.json  publish.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  wizard.md
.github/workflows/: ci.yml  opencode.yml
packaging/arch/: PKGBUILD
scripts/: trim-tauri-debug.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  export.rs  main.rs  project.rs  publish.rs
src/components/: DeployModal.svelte  ExportPanel.svelte  FileExplorer.svelte  FrontmatterChoiceModal.svelte  MarkdownEditor.svelte  MetadataPanel.svelte  OnboardingWizard.svelte  ProjectWizard.svelte  PublishModal.svelte  Tabs.svelte
src/lib/: types.ts
src/lib/frontmatter/: parse.test.ts  parse.ts  serialize.test.ts  serialize.ts
src/lib/ssg/: contract.ts  index.ts  schema.ts
src/lib/ssg/plugins/: eleventy.ts  minimal.ts
src/lib/validation/: engine.test.ts  engine.ts
src/templates/wizard/: gatsby.md  hugo.md  jekyll.md
