[package]
name = "ernest"
version = "0.1.0+0037"
description = "Ernest"
authors = ["you"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
ssh2 = "0.9"
suppaftp = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
